# AI_database_analyzer

./: .gitignore  README.md
backend/: .env  main.py  pyproject.toml  requirements.txt  x.ipynb
backend/data/: sql_generator_instruction.txt  text_instruction.txt
backend/db/: create_app_tables.sql  session.py
backend/models/: models.py
backend/schemas/: user.py
backend/scripts/: csv_to_postgresql.py  init_db.py
backend/services/: generator.py
backend/src/: auth.py  conversations.py  data.py  users.py
frontend/: mdx-components.tsx  output.css  package-lock.json  package.json  proxy.ts
frontend/app/: error.tsx  globals.css  layout.tsx
frontend/app/(pages)/: layout.tsx
frontend/app/(pages)/users/: page.tsx  (+1 more)
frontend/app/ai-analyzer/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/explore/: page.tsx
frontend/app/explore-data/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: Header.tsx
frontend/components/ai-analyzer/: Charts.tsx  ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPart.tsx  ConversationItem.tsx  DataBlock.tsx  Hero.tsx  Message.tsx  RecentConvs.tsx
frontend/components/dashboard/: DashboardStatsGrid.tsx  RecentActivity.tsx
frontend/components/explore/: TableInfoCard.tsx
frontend/components/login/: LoginForm.tsx
frontend/components/ui/: ErrorMessage.tsx  Header.tsx  LoadingSpinner.tsx  PageDescription.tsx  StatCard.tsx
frontend/lib/: api.ts  auth.ts  formatSQL.ts  getRandElements.tsx
frontend/lib/api/: authFetch.ts  authFetchClient.ts
frontend/types/: conversation.ts  ecomr_data.ts  user.ts
(+10 files in other folders)
